perf: Make request parameters more reasonable
