# structtypes/request.go
@@ -4,7 +4,7 @@ package structtypes
 type UserRegReq struct {
 	Username string `json:"username" binding:"required"`
 	Password string `json:"password" binding:"required"`
-	Language string `json:"language" binding:"required,bcp47_language_tag"`
+	Language string `json:"language" binding:"required,oneof=zh-Hans zh-Hant en-US"`
 	Email    string `json:"email" binding:"required,email"`
 }
 
@@ -12,26 +12,26 @@ type UserRegReq struct {
 type UserLogin struct {
 	Username string `json:"username" binding:"required"`
 	Password string `json:"password" binding:"required"`
-	Language string `json:"language" binding:"required,bcp47_language_tag"`
+	Language string `json:"language" binding:"required,oneof=zh-Hans zh-Hant en-US"`
 }
 
 // 创建项目结构体
 type Createproject struct {
-	Name     string `json:"name" binding:"required"`     //名字
-	Username string `json:"username" binding:"required"` //用户名
-	Tokens   string `json:"tokens" binding:"required"`   //用户token
+	Projectname string `json:"projectname" binding:"required"` //名字
+	Username    string `json:"username" binding:"required"`    //用户名
+	Tokens      string `json:"tokens" binding:"required"`      //用户token
 }
 
 // 删除项目结构体
 type Delproject struct {
-	Name     string `json:"name" binding:"required"`     //名字
-	Username string `json:"username" binding:"required"` //用户名
-	Tokens   string `json:"tokens" binding:"required"`   //用户token
+	Projectname string `json:"projectname" binding:"required"` //名字
+	Username    string `json:"username" binding:"required"`    //用户名
+	Tokens      string `json:"tokens" binding:"required"`      //用户token
 }
 
 // 模糊查询结构体
 type Usersearch struct {
-	Name string `form:"name" binding:"required"`
+	Username string `form:"username"`
 }
 
 // 查询项目权限列表结构体
